codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__zteam_workbench_active_view.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                                    "
"ZTeam Mission Board                                                                                 "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ Mission                                                                                          │"
"│ 目标：重做设置页体验，覆盖移动端布局和保存接口                                                   │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " ")]
"│ 模式：parallel · 阶段：validating · Cycle：1                                                     │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (20, " "), (22, " "), (24, " "), (44, " ")]
"│ 整体状态：协作者 A、协作者 B 已就绪，可继续分派任务或转发消息。                                  │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (21, " "), (23, " "), (25, " "), (27, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " "), (52, " "), (54, " "), (56, " "), (58, " "), (60, " "), (62, " "), (64, " ")]
"│ Autopilot：pending=none · waiting_on=none · manual_override=active · repair=F:0/2 B:0/2          │" Hidden by multi-width symbols: [(12, " ")]
"│                                                                                                  │"
"│ Acceptance                                                                                       │"
"│ • [已满足] 目标已拆成可执行的协作分工                                                            │" Hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " ")]
"│ • [已满足] 需要参与的协作者已回流阶段结果                                                        │" Hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " ")]
"│ • [已满足] 主线程已形成验证结论或下一轮动作                                                      │" Hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " "), (44, " ")]
"│                                                                                                  │"
"│ Worker Assignments                                                                               │"
"│ 协作者 A：已附着 · /root/frontend · 00000000-0000-0000-0000-000000000010                         │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (11, " "), (13, " "), (15, " "), (17, " ")]
"│   来源：本地 subagent                                                                            │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " ")]
"│   当前职责：负责 UI/交互侧推进                                                                   │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " ")]
"│   当前分派：修复导航栏布局                                                                       │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " ")]
"│   最近结果：前端阶段结果：工作台布局已完成，并补上移动端断点。                                   │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (51, " "), (53, " "), (55, " "), (57, " "), (59, " "), (61, " "), (63, " ")]
"│ 协作者 B：已附着 · /root/backend · 00000000-0000-0000-0000-000000000020                          │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (11, " "), (13, " "), (15, " "), (17, " ")]
"│   来源：本地 subagent                                                                            │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " ")]
"│   当前职责：负责接口/数据侧推进                                                                  │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " ")]
"│   当前分派：对齐接口字段                                                                         │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " ")]
"│   最近结果：后端阶段结果：接口字段已统一，并补齐错误态返回。                                     │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (51, " "), (53, " "), (55, " "), (57, " "), (59, " "), (61, " ")]
"│                                                                                                  │"
"│ Validation                                                                                       │"
"│ 验证概览：已收到当前需要参与的协作者阶段结果，等待主线程归纳验证结论。                           │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (51, " "), (53, " "), (55, " "), (57, " "), (59, " "), (61, " "), (63, " "), (65, " "), (67, " "), (69, " "), (71, " ")]
"│ 下一步：检查阶段结果并决定下一轮分派或收口                                                       │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " ")]
"│ 最近自动动作：手动 relay override 已接管当前 cycle：对齐接口字段。                               │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (53, " "), (55, " "), (57, " "), (59, " "), (61, " "), (63, " "), (65, " "), (67, " ")]
"│ 阶段结果：协作者 B：后端阶段结果：接口字段已统一，并补齐错误态返回。                             │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (51, " "), (53, " "), (55, " "), (57, " "), (59, " "), (61, " "), (63, " "), (65, " "), (67, " "), (69, " ")]
"│ 阶段结果：协作者 A：前端阶段结果：工作台布局已完成，并补上移动端断点。                           │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (51, " "), (53, " "), (55, " "), (57, " "), (59, " "), (61, " "), (63, " "), (65, " "), (67, " "), (69, " "), (71, " ")]
"│                                                                                                  │"
"│ Activity                                                                                         │"
"│ • 协作者 A -> 协作者 B：对齐接口字段                                                             │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (17, " "), (19, " "), (21, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " ")]
"│ • 主线程 -> 协作者 A：修复导航栏布局                                                             │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (15, " "), (17, " "), (19, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " ")]
"│ • 协作者 A、协作者 B 已全部注册，可开始分派任务或中转消息。                                      │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (13, " "), (15, " "), (17, " "), (19, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " "), (52, " "), (54, " "), (56, " "), (58, " "), (60, " ")]
"│ • 协作者 B 已注册到 `/root/backend`。                                                            │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (14, " "), (16, " "), (18, " "), (20, " "), (38, " ")]
"│ • 当前已收到 协作者 A，仍等待 协作者 B 注册。                                                    │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (16, " "), (18, " "), (20, " "), (24, " "), (26, " "), (28, " "), (30, " "), (33, " "), (35, " "), (37, " "), (42, " "), (44, " "), (46, " ")]
"│ • 协作者 A 已注册到 `/root/frontend`。                                                           │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (14, " "), (16, " "), (18, " "), (20, " "), (39, " ")]
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"Esc 关闭 · /zteam start <goal> 启动 · /zteam attach 恢复 · /zteam relay override                    " Hidden by multi-width symbols: [(5, " "), (7, " "), (32, " "), (34, " "), (53, " "), (55, " ")]
