codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__zteam_workbench_empty_view.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 353
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                                    "
"ZTeam 工作台                                                                                        " Hidden by multi-width symbols: [(7, " "), (9, " "), (11, " ")]
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ 概况                                                                                             │" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"│ 整体状态：尚未启动。先运行 `/zteam start` 创建 frontend/backend worker。                         │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (45, " "), (47, " "), (73, " ")]
"│ 阻塞提示：当前还没有可分派目标；工作台只会显示空态。                                             │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (51, " "), (53, " ")]
"│                                                                                                  │"
"│ Worker 面板                                                                                      │" Hidden by multi-width symbols: [(10, " "), (12, " ")]
"│ Android 前端：等待注册 · /root/frontend                                                          │" Hidden by multi-width symbols: [(11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " ")]
"│   来源：本地 subagent                                                                            │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " ")]
"│   最近任务：无                                                                                   │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " ")]
"│   最近结果：无                                                                                   │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " ")]
"│ 后端：等待注册 · /root/backend                                                                   │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " ")]
"│   来源：本地 subagent                                                                            │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " ")]
"│   最近任务：无                                                                                   │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " ")]
"│   最近结果：无                                                                                   │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " ")]
"│                                                                                                  │"
"│ 任务板                                                                                           │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " ")]
"│ Android 前端：等待任务                                                                           │" Hidden by multi-width symbols: [(11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " ")]
"│ 后端：等待任务                                                                                   │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " ")]
"│                                                                                                  │"
"│ 消息流                                                                                           │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " ")]
"│ • 暂无分派、relay 或 worker 生命周期事件。                                                       │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (21, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " ")]
"│                                                                                                  │"
"│ 结果回流                                                                                         │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"│ • 暂无阶段结果。                                                                                 │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " ")]
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"Esc 关闭 · /zteam start 创建 worker · /zteam attach 再附着 · /zteam <worker> <任务>                 " Hidden by multi-width symbols: [(5, " "), (7, " "), (25, " "), (27, " "), (53, " "), (55, " "), (57, " "), (79, " "), (81, " ")]
