codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__zteam_workbench_partial_registration_view.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                                    "
"ZTeam Mission Board                                                                                 "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ Mission                                                                                          │"
"│ 目标：重做设置页体验，覆盖移动端布局和保存接口                                                   │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " ")]
"│ 模式：parallel · 阶段：bootstrapping · Cycle：1                                                  │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (20, " "), (22, " "), (24, " "), (47, " ")]
"│ 整体状态：已收到 协作者 A，仍等待 协作者 B 注册。                                                │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (20, " "), (22, " "), (24, " "), (28, " "), (30, " "), (32, " "), (34, " "), (37, " "), (39, " "), (41, " "), (46, " "), (48, " "), (50, " ")]
"│                                                                                                  │"
"│ Acceptance                                                                                       │"
"│ • [已满足] 目标已拆成可执行的协作分工                                                            │" Hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " ")]
"│ • [待验证] 需要参与的协作者已回流阶段结果                                                        │" Hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " ")]
"│ • [待验证] 主线程已形成验证结论或下一轮动作                                                      │" Hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " "), (44, " ")]
"│                                                                                                  │"
"│ Worker Assignments                                                                               │"
"│ 协作者 A：已附着 · /root/frontend · 00000000-0000-0000-0000-000000000010                         │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (11, " "), (13, " "), (15, " "), (17, " ")]
"│   来源：本地 subagent                                                                            │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " ")]
"│   当前职责：负责 UI/交互侧推进                                                                   │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " ")]
"│   当前分派：拆解并推进前端侧工作：重做设置页体验，覆盖移动端布局和保存接口                       │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (51, " "), (53, " "), (55, " "), (57, " "), (59, " "), (61, " "), (63, " "), (65, " "), (67, " "), (69, " "), (71, " "), (73, " "), (75, " ")]
"│   最近结果：无                                                                                   │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " ")]
"│ 协作者 B：等待注册 · /root/backend                                                               │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " ")]
"│   来源：本地 subagent                                                                            │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " ")]
"│   当前职责：负责接口/数据侧推进                                                                  │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " ")]
"│   当前分派：拆解并推进后端侧工作：重做设置页体验，覆盖移动端布局和保存接口                       │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (51, " "), (53, " "), (55, " "), (57, " "), (59, " "), (61, " "), (63, " "), (65, " "), (67, " "), (69, " "), (71, " "), (73, " "), (75, " ")]
"│   最近结果：无                                                                                   │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " ")]
"│                                                                                                  │"
"│ Validation                                                                                       │"
"│ 验证概览：尚未形成验证结论。                                                                     │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " ")]
"│ 阻塞：当前仅 协作者 A 已注册，仍缺 协作者 B；root -> worker 与 worker -> worker 路由暂不可用。若 │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (16, " "), (18, " "), (20, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (38, " "), (40, " "), (42, " "), (46, " "), (63, " "), (83, " "), (85, " "), (87, " "), (89, " "), (91, " "), (93, " "), (95, " "), (97, " ")]
"│   长时间无变化，说明主线程可能只创建了一部分 worker。                                            │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (54, " ")]
"│ 下一步：等待需要参与的协作者进入协作上下文                                                       │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " ")]
"│ 阶段结果：暂无回流结果。                                                                         │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " ")]
"│                                                                                                  │"
"│ Activity                                                                                         │"
"│ • 当前已收到 协作者 A，仍等待 协作者 B 注册。                                                    │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (16, " "), (18, " "), (20, " "), (24, " "), (26, " "), (28, " "), (30, " "), (33, " "), (35, " "), (37, " "), (42, " "), (44, " "), (46, " ")]
"│ • 协作者 A 已注册到 `/root/frontend`。                                                           │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (14, " "), (16, " "), (18, " "), (20, " "), (39, " ")]
"│ • 当前 mission：重做设置页体验，覆盖移动端布局和保存接口。模式：parallel；下一步：等待两个协作者 │" Hidden by multi-width symbols: [(5, " "), (7, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (51, " "), (53, " "), (55, " "), (57, " "), (59, " "), (61, " "), (63, " "), (65, " "), (75, " "), (77, " "), (79, " "), (81, " "), (83, " "), (85, " "), (87, " "), (89, " "), (91, " "), (93, " "), (95, " "), (97, " ")]
"│   都进入协作上下文，再开始首轮并行分派。                                                         │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " ")]
"│ • 主线程已提交创建默认协作者的启动指令。等待 spawn 事件注册；若长时间无变化，请检查主线程是否真  │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (54, " "), (56, " "), (58, " "), (60, " "), (62, " "), (64, " "), (66, " "), (68, " "), (70, " "), (72, " "), (74, " "), (76, " "), (78, " "), (80, " "), (82, " "), (84, " "), (86, " "), (88, " "), (90, " "), (92, " "), (94, " "), (96, " ")]
"│   正调用了 `spawn_agent`。                                                                       │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (27, " ")]
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"Esc 关闭 · /zteam start <goal> 启动 · /zteam attach 恢复 · /zteam relay override                    " Hidden by multi-width symbols: [(5, " "), (7, " "), (32, " "), (34, " "), (53, " "), (55, " ")]
