codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__zteam_workbench_reattach_required_view.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 611
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                                    "
"ZTeam 工作台                                                                                        " Hidden by multi-width symbols: [(7, " "), (9, " "), (11, " ")]
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ 概况                                                                                             │" Hidden by multi-width symbols: [(3, " "), (5, " ")]
"│ 整体状态：前端、后端 需要再附着。运行 `/zteam attach` 尝试恢复最近的 worker 连接。               │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (57, " "), (59, " "), (61, " "), (63, " "), (65, " "), (67, " "), (69, " "), (79, " "), (81, " "), (83, " ")]
"│ 外部 adapter：frontend => zteam-frontend，backend => zteam-backend                               │" Hidden by multi-width symbols: [(3, " "), (5, " "), (15, " "), (43, " ")]
"│ 阻塞提示：前端、后端 的最近线程当前未附着；先运行 `/zteam attach` 尝试重新附着，必要时再用 `/    │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " "), (69, " "), (71, " "), (73, " "), (75, " "), (77, " "), (79, " "), (81, " "), (83, " "), (85, " "), (87, " "), (89, " "), (91, " ")]
"│ zteam start` 重建 worker。                                                                       │" Hidden by multi-width symbols: [(16, " "), (18, " "), (27, " ")]
"│                                                                                                  │"
"│ Worker 面板                                                                                      │" Hidden by multi-width symbols: [(10, " "), (12, " ")]
"│ 前端：待再附着 · /root/frontend · 00000000-0000-0000-0000-000000000010                           │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " ")]
"│   来源：本地 subagent                                                                            │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " ")]
"│   最近任务：修复导航栏布局                                                                       │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " ")]
"│   最近结果：前端阶段结果：等待重新附着。                                                         │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " ")]
"│ 后端：待再附着 · /root/backend · 00000000-0000-0000-0000-000000000020                            │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " ")]
"│   来源：本地 subagent                                                                            │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " ")]
"│   最近任务：对齐接口字段                                                                         │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " ")]
"│   最近结果：后端阶段结果：等待重新附着。                                                         │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " ")]
"│                                                                                                  │"
"│ 任务板                                                                                           │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " ")]
"│ 前端：修复导航栏布局                                                                             │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " ")]
"│ 后端：对齐接口字段                                                                               │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " ")]
"│                                                                                                  │"
"│ 消息流                                                                                           │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " ")]
"│ • 已恢复 后端 worker 的最近状态；线程 00000000-0000-0000-0000-000000000020 当前未附着，可运行 `/ │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (12, " "), (14, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (78, " "), (80, " "), (82, " "), (84, " "), (86, " "), (88, " "), (90, " "), (92, " "), (94, " ")]
"│   zteam attach` 再附着。                                                                         │" Hidden by multi-width symbols: [(19, " "), (21, " "), (23, " "), (25, " ")]
"│ • 已恢复 前端 worker 的最近状态；线程 00000000-0000-0000-0000-000000000010 当前未附着，可运行 `/ │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (12, " "), (14, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (78, " "), (80, " "), (82, " "), (84, " "), (86, " "), (88, " "), (90, " "), (92, " "), (94, " ")]
"│   zteam attach` 再附着。                                                                         │" Hidden by multi-width symbols: [(19, " "), (21, " "), (23, " "), (25, " ")]
"│                                                                                                  │"
"│ 结果回流                                                                                         │" Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
"│ • 暂无阶段结果。                                                                                 │" Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " ")]
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
"Esc 关闭 · /zteam start 创建 worker · /zteam attach 再附着 · /zteam frontend <任务> / /zteam backend" Hidden by multi-width symbols: [(5, " "), (7, " "), (25, " "), (27, " "), (53, " "), (55, " "), (57, " "), (79, " "), (81, " ")]
